--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -211,7 +211,7 @@
 <!ENTITY Ctr_dblclnewtab	"Подвійний клік відкриває нову вкладку (використовує адресу нової вкладки браузера)">
 <!ENTITY Ctr_hidetbwot		"Приховувати панель вкладок з одною вкладкою">
 <!ENTITY Ctr_hidetbwote		"Зменшити затримки приховування при запуску">
-<!ENTITY Ctr_hidetbwote_i	"Could cause glitches on tabs toolbar">
+<!ENTITY Ctr_hidetbwote_i	"Може викликати збої на панелі вкладок">
 <!ENTITY Ctr_hidetbwote2	"Утримувати панель заголовку (вкладки нагорі)">
 <!ENTITY Ctr_notabfog		"Прибрати затуманення тла (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Прибрати колір тла (Windows AeroGlass/8)">
@@ -234,7 +234,7 @@
 <!ENTITY Ctr_hidesbclose	"Бокові панелі: приховати кнопку «Закрити» бокової панелі">
 <!ENTITY Ctr_notextshadow	"Панелі: приховати тінь тексту панелі та тексту вкладки">
 <!ENTITY Ctr_chevronfix		"Панель навігації: приховати подвійну стрілку («шеврон») в кінці панелі">
-<!ENTITY Ctr_tbsep_winc		"Top toolbars: additional toolbar separators">
+<!ENTITY Ctr_tbsep_winc		"Верхні панелі: розділювачі додаткових панелей">
 
 <!ENTITY Ctr_closeabarbut	"Приховати кнопку закривання панелі додатків">
 <!ENTITY Ctr_highaddonsbar	"Збільшити висоту">
@@ -263,13 +263,13 @@
 <!ENTITY Ctr_fx34loop		"В &brandShortName; 34+ введені особливості «виклику та сеансу зв’язку». Вимкнення цього параметру видалить їх.">
 <!ENTITY Ctr_fx35devtheme	"В &brandShortName; 35+ введено нову «тему» від розробника. Вимкнення цих налаштувань вимикає цю «тему» і її кнопку в ручному режимі налаштувань.">
 <!ENTITY Ctr_fx36prefs		"В &brandShortName; 36+ введено нове налаштування у вкладці. Вимкнення цього пункту відновлює вікно зі старими налаштуванням.">
-<!ENTITY Ctr_fx38reader		"&brandShortName; 38+ introduced a new 'reader mode'. Unchecking these preferences disables it and removes its icon from location bar.">
+<!ENTITY Ctr_fx38reader		"В &brandShortName; 38+ введено новий «режим читання». Вимкнення цього пункту вимикає цей режим та прибирає його іконку з панелі навігації.">
 <!ENTITY Ctr_e_omtc			"OMTC / проблеми завислих вкладок">
 <!ENTITY Ctr_e_searchui		"Вигляд панелі Пошук">
 <!ENTITY Ctr_e_loop			"Виклик та сеанс зв’язку">
 <!ENTITY Ctr_e_deved		"Тема від розробника">
 <!ENTITY Ctr_e_prefsui		"Налаштування у вкладці">
-<!ENTITY Ctr_e_readermode	"Reader mode">
+<!ENTITY Ctr_e_readermode	"Режим читання">
 
 
 <!ENTITY Ctr_pw_settings	"Налаштування">
