--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -138,6 +138,7 @@
 <!ENTITY Ctr_alt_newtabp	"Página de nueva pestaña: Apariencia alternativa">
 <!ENTITY Ctr_bmbutpanelm	"Botón de menú Marcadores: Aspecto del panel de menú">
 <!ENTITY Ctr_bmbutnotext	"Botón de menú Marcadores: Ocultar etiqueta en la barra de marcadores">
+<!ENTITY Ctr_skipprintpr	"Print button: skip print preview">
 <!ENTITY Ctr_noresizerxp	"Ocultar redimensionador (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"Abrir barra de direcciones adicional (Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"Menú de panel emergente: Ocultar etiquetas de los botones">
