--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -138,7 +138,7 @@
 <!ENTITY Ctr_alt_newtabp	"新标签页页面: 备选的外观">
 <!ENTITY Ctr_bmbutpanelm	"书签菜单按钮: 面板式菜单外观">
 <!ENTITY Ctr_bmbutnotext	"书签菜单按钮: 隐藏书签工具栏上的文本标签">
-<!ENTITY Ctr_skipprintpr	"Print button: skip print preview">
+<!ENTITY Ctr_skipprintpr	"打印按钮: 跳过打印预览">
 <!ENTITY Ctr_noresizerxp	"隐藏调整大小控件 (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"打开附加地址栏(Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"面板菜单: 隐藏按钮标签文本">
@@ -212,7 +212,7 @@
 <!ENTITY Ctr_dblclnewtab	"双击新建标签页 (使用 browser.newtab.url 设置)">
 <!ENTITY Ctr_hidetbwot		"当只有一个标签页时隐藏标签页栏">
 <!ENTITY Ctr_hidetbwote		"启动时减少隐藏延迟">
-<!ENTITY Ctr_hidetbwote_i	"Could cause glitches on tabs toolbar">
+<!ENTITY Ctr_hidetbwote_i	"可能会导致标签页工具栏闪烁">
 <!ENTITY Ctr_hidetbwote2	"保留标题栏 (标签页在顶部)">
 <!ENTITY Ctr_notabfog		"移除背景模糊 (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"移除背景颜色 (Windows AeroGlass/8)">
@@ -235,7 +235,7 @@
 <!ENTITY Ctr_hidesbclose	"侧边栏: 隐藏侧边栏关闭按钮">
 <!ENTITY Ctr_notextshadow	"工具栏: 隐藏工具栏文本与标签页文本的阴影">
 <!ENTITY Ctr_chevronfix		"导航工具栏: 隐藏工具栏尾部的双箭头 ('chevron')">
-<!ENTITY Ctr_tbsep_winc		"Top toolbars: additional toolbar separators">
+<!ENTITY Ctr_tbsep_winc		"顶部工具栏: 附加的工具栏分隔符">
 
 <!ENTITY Ctr_closeabarbut	"隐藏附加组件栏关闭按钮">
 <!ENTITY Ctr_highaddonsbar	"增加高度">
