--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -280,6 +280,8 @@
 <!ENTITY Ctr_pw_set_preaus	"&brandShortName; Vorgabe">
 <!ENTITY Ctr_pw_set_export	"Exportiere Einstellungen">
 <!ENTITY Ctr_pw_set_import	"Importiere Einstellungen">
+<!ENTITY Ctr_pw_set_syncon	"Zu Sync hinzufügen">
+<!ENTITY Ctr_pw_set_syncoff	"Aus Sync entfernen">
 
 <!ENTITY Ctr_special_font	"Hintergrundfarbeinstellungen sind nur für das Standard-Thema vorhanden!">
 <!ENTITY Ctr_special_info	"Einige Optionen haben nur in bestimmten Fällen sichtbare Auswirkungen!">
