--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -280,6 +280,8 @@
 <!ENTITY Ctr_pw_set_preaus	"Pré-configurações do &brandShortName;">
 <!ENTITY Ctr_pw_set_export	"Exportar as Preferências">
 <!ENTITY Ctr_pw_set_import	"Importar as Preferências">
+<!ENTITY Ctr_pw_set_syncon	"Add to Sync">
+<!ENTITY Ctr_pw_set_syncoff	"Remove from Sync">
 
 <!ENTITY Ctr_special_font	"As Configurações da Cor do Fundo são Só para o Tema Padrão!">
 <!ENTITY Ctr_special_info	"Algumas Opções Podem Oferecer Alterações Visuais Só em Certos Casos!">
