--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -280,6 +280,8 @@
 <!ENTITY Ctr_pw_set_preaus	"&brandShortName; preset">
 <!ENTITY Ctr_pw_set_export	"Exportovat nastavení">
 <!ENTITY Ctr_pw_set_import	"Importovat nastavení">
+<!ENTITY Ctr_pw_set_syncon	"Add to Sync">
+<!ENTITY Ctr_pw_set_syncoff	"Remove from Sync">
 
 <!ENTITY Ctr_special_font	"Nastavení pozadí ovlivní pouze výchoz vzhled!">
 <!ENTITY Ctr_special_info	"Některé volby nemusí v některých případech vzhled vůbec ovlivnit">
