--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -280,6 +280,8 @@
 <!ENTITY Ctr_pw_set_preaus	"&brandShortName; opsætning">
 <!ENTITY Ctr_pw_set_export	"Eksporter indstillinger">
 <!ENTITY Ctr_pw_set_import	"Importer indstillinger">
+<!ENTITY Ctr_pw_set_syncon	"Add to Sync">
+<!ENTITY Ctr_pw_set_syncoff	"Remove from Sync">
 
 <!ENTITY Ctr_special_font	"Indstillinger til baggrundsfarve gælder kun til standard tema!">
 <!ENTITY Ctr_special_info	"Nogle valgmuligheder giver måske ikke altid synlige ændringer">
